--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,115 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: 45px;
+  color: aliceblue;
+  font-weight: 600;
+  text-shadow: 2px 2px 2p black;
+}
+
+header {
+  text-align: center;
+  background-color: rgb(102, 94, 74);
+}
+
+.app {
+  background: url(../src/images/mountain.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+}
+
+.taskCard {
+  width: 250px;
+  padding: 10px 25px;
+  margin: 10px 1%;
+  background-color: rgb(228, 228, 228);
+  border-radius: 5px;
+}
+
+.taskCardTitleInputArea {
+  margin-bottom: 10px;
+  width: 80%;
+  cursor: pointer;
+}
+
+.taskCardInput {
+  width: 80%;
+  font-size: 1.1rem;
+  padding: 4px 6px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+}
+
+.taskAddInput {
+  width: 100%;
+  font-size: 1.3rem;
+  padding: 10px 15px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+}
+
+.taskBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 17px 0;
+  margin-top: 10px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px 1px rgb(75, 75, 75);
+}
+
+.taskText {
+  margin-left: 12px;
+}
+
+.taskTrashButton {
+  cursor: pointer;
+  margin-right: 9px;
+  border: none;
+}
+
+.taskCarsArea {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.addTaskCardButtonArea {
+  margin-left: 1%;
+  margin-top: 25px;
+}
+
+.addTaskCardButton {
+  padding: 10px 18px;
+  border-radius: 9999px;
+  font-size: 30px;
+  background-color: chocolate;
+  box-shadow: 3px 3px 8px 1px black;
+  cursor: pointer;
+  transition: all 0.8s;
+}
+
+.addTaskCardButton:hover {
+  box-shadow: none;
+  transform: translate(3px 3px);
+}
+.taskTitlleAndTaskDelete {
+  display: flex;
+  justify-content: space-between;
+}
+
+.deleteButton {
+  border: none;
+  background-color: rgb(228, 228, 228);
+  cursor: pointer;
+  font-size: 16px;
+  color: brown;
 }
