--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -28,7 +28,7 @@
   font-size: 24px;
 }
 .loginbox {
-  height: 300px;
+  height: 400px;
   padding: 20px;
   background-color: white;
   border-radius: 10px;
@@ -36,7 +36,12 @@
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 3px 7px 13px -10px #404755;
-  border-radius: 10px;
+}
+
+.loginbox form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .loginInput {
