--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@ header {
   background: url(../src/images/mountain.jpg);
   height: 100vh;
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .taskCard {
@@ -112,4 +115,10 @@ header {
   cursor: pointer;
   font-size: 16px;
   color: brown;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
